[package]
name = "automata-cli"
version = "0.1.0"
authors = ["Automata Team"]
build = "build.rs"
edition = "2018"
default-run = "automata"
repository = "https://github.com/automatalabs/automata"
license = "Apache-2.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[badges]
travis-ci = { repository = "paritytech/substrate", branch = "master" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "paritytech/substrate" }
is-it-maintained-open-issues = { repository = "paritytech/substrate" }

[[bin]]
name = "automata"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0" }
serde = { version = "1.0.102", features = ["derive"] }
futures = { version = "0.3.1", features = ["compat"] }
hex-literal = "0.3.1"
log = "0.4.8"
rand = "0.7.2"
structopt = { version = "0.3.8", optional = true }
tracing = "0.1.19"
parking_lot = "0.10.0"
rustc-hex = "2.0"

# primitives
sp-authority-discovery = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-consensus-aura = { version = "0.9.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
grandpa-primitives = { version = "3.0.0", package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-timestamp = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
#sp-finality-tracker = { version = "3.0.0", default-features = false }
sp-inherents = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-keyring = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-io = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }

# client dependencies
sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-chain-spec = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-network = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-consensus-slots = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-consensus-aura = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
grandpa = { version = "0.9.0", package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-client-db = { version = "0.9.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-offchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-basic-authorship = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-service = { version = "0.9.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-tracing = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-telemetry = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-authority-discovery = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-executor = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-finality-grandpa-warp-sync = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }

frame-benchmarking = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }

# frame dependencies
pallet-indices = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-timestamp = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-contracts = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
frame-system = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-balances = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-transaction-payment = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-im-online = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-authority-discovery = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
getrandom = { version = "0.2", features = ["js"] }

# node-specific dependencies
automata-runtime = { path = "../runtime" }
automata-rpc = { path = "../rpc" }
automata-primitives = { path = "../primitives" }

# CLI-specific dependencies
sc-cli = { version = "0.9.0", optional = true, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
frame-benchmarking-cli = { version = "3.0.0", optional = true, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }

# WASM-specific dependencies
wasm-bindgen = { version = "0.2.57", optional = true }
wasm-bindgen-futures = { version = "0.4.7", optional = true }
#browser-utils = { package = "substrate-browser-utils",  optional = true, version = "0.8.0" }

# EVM dependencies
fc-consensus = { version = "2.0.0" }
fc-rpc = { version = "1.0.0" }
fc-rpc-core = { version = "1.0.0" }
pallet-evm = { version = "4.0.0" }

[dev-dependencies]
sc-keystore = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-keystore = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
#sc-consensus-babe = { version = "0.9.0", features = ["test-helpers"], git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-consensus-epochs = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
#sc-service-test = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
tempfile = "3.1.0"

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", optional = true, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
structopt = { version = "0.3.8", optional = true }
frame-benchmarking-cli = { version = "3.0.0", optional = true, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-cli = { version = "0.9.0", optional = true, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
vergen = { version = "3.0.4", optional = true }

[features]
default = ["cli", "wasmtime"]
cli = [
	"sc-cli",
	"frame-benchmarking-cli",
	"sc-service/db",
	"structopt",
	"vergen",
	"substrate-build-script-utils",
]
wasmtime = [
	"cli",
	"sc-cli/wasmtime",
	"sc-service/wasmtime",
]