[package]
name = "automata-primitives"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-system = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-application-crypto = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }

getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-system/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
]
