[package]
name = "automata-rpc"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2018"
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.4"
jsonrpc-core = "15.0.0"
jsonrpc-derive = "15.0.0"
jsonrpc-core-client = "15.0.0"
jsonrpc-pubsub = "15.0.0"
serde = { version = "1.0", features = ["derive"] }

automata-primitives = { path = "../primitives" }
automata-runtime = { path = "../runtime" }

sc-rpc-api = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-contracts-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-transaction-payment-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
substrate-frame-rpc-system = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-finality-grandpa = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-finality-grandpa-rpc = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-keystore = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-consensus-epochs = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-light = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-chain-spec = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-block-builder = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-consensus-manual-seal = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-network = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-keystore = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sc-sync-state-rpc = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }

fc-consensus = { version = "2.0.0" }
fc-rpc = { version = "1.0.0" }
fc-rpc-core = { version = "1.0.0" }

pallet-fulfillment = { path = "../pallets/fulfillment" }

getrandom = { version = "0.2", features = ["js"] }