[package]
name = "automata-runtime"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2018"
build = "build.rs"
license = "Apache-2.0"

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
integer-sqrt = { version = "0.1.2" }
rustc-hex = { version = "2.0", optional = true }
serde = { version = "1.0.102", optional = true }
smallvec = "1.4.2"
static_assertions = "1.1.0"

# primitives
automata-primitives = { default-features = false, path = "../primitives" }
sp-authority-discovery = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-consensus-aura = { version = "0.9.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-block-builder = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-inherents = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-offchain = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-api = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-staking = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-keyring = { version = "3.0.0", optional = true, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-session = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-transaction-pool = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-version = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
fp-rpc = { version = "1.0.0" }
sp-arithmetic = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }

# frame dependencies
frame-executive = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
frame-benchmarking = { version = "3.0.0", default-features = false,  optional = true, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
frame-system = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-authority-discovery = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-authorship = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-aura = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-balances = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-collective = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-democracy = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-elections-phragmen = "3.0.0"
pallet-grandpa = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-im-online = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-indices = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-identity = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-membership = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-offences = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-randomness-collective-flip = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-session = { version = "3.0.0", features = ["historical"],  default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-sudo = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-timestamp = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-utility = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-transaction-payment = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-scheduler = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-staking = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-staking-reward-curve = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }

# custom pallets
pallet-stake = { path = '../pallets/stake', default-features = false }
pallet-marketplace = { path = "../pallets/marketplace", default-features = false }
pallet-fulfillment = { path = "../pallets/fulfillment", default-features = false }
pallet-ethereum = { version = "2.0.0" }
pallet-evm = { version = "4.0.0" }
pallet-evm-precompile-simple = { version = "1.0.0" }

getrandom = { version = "0.2", features = ["js"] }

[build-dependencies]
substrate-wasm-builder = { version = "3.0.0" }

[dev-dependencies]
sp-io = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }

[features]
default = ["std"]
std = [
	"sp-authority-discovery/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"sp-consensus-aura/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"sp-block-builder/std",
	"codec/std",
	"pallet-collective/std",
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"frame-executive/std",
	"pallet-grandpa/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"sp-inherents/std",
	"pallet-membership/std",
	"pallet-identity/std",
	"pallet-scheduler/std",
	"automata-primitives/std",
	"sp-offchain/std",
	"pallet-offences/std",
	"sp-core/std",
	"pallet-randomness-collective-flip/std",
	"sp-std/std",
	"rustc-hex",
	"serde",
	"pallet-session/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-staking/std",
	"sp-keyring",
	"sp-session/std",
	"pallet-sudo/std",
	"frame-support/std",
	"frame-benchmarking/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-transaction-pool/std",
	"pallet-utility/std",
	"sp-version/std",
	"pallet-marketplace/std",
	"pallet-fulfillment/std",
	"pallet-stake/std",
	"pallet-evm/std",
	"pallet-ethereum/std",
]