[package]
authors = ['Automata Team']
edition = '2018'
name = 'pallet-marketplace'
version = '0.1.0'
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
frame-system = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-std = {version  = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
primitives = { package = "automata-primitives", path = "../../primitives", default-features = false }
pallet-stake = { version = "0.1.0", default-features = false, path = '../stake' }
fulfillment = { package = "pallet-fulfillment", path = "../fulfillment", default-features = false }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
sp-io = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }
pallet-balances = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-05' }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'sp-std/std',
    'sp-runtime/std',
    'primitives/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-stake/std',
    'fulfillment/std'
]
